<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context=".MainActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:id="@+id/constraintLayout">

        <TextView
                android:text="@string/calculo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/txt_titulo_app"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintVertical_bias="0.085"/>
        <TextView
                android:text="@string/resultado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/txt_resultado"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintVertical_bias="0.23" android:visibility="invisible"/>
        <TextView
                android:text="@string/resultado_calculo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/txt_resultado_calculo"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.507"
                app:layout_constraintVertical_bias="0.176"/>
        <TextView
                android:text="@string/classificacao_resultado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/txt_classificacao_resultado"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.507"
                app:layout_constraintVertical_bias="0.345"/>
        <TextView
                android:text="@string/classificacao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txt_classificacao"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintHorizontal_bias="0.498" app:layout_constraintVertical_bias="0.405"
                android:visibility="invisible"/>
        <TextView
                android:text="@string/altura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/txt_altura"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintHorizontal_bias="0.507" app:layout_constraintVertical_bias="0.522"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/input_altura"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintHorizontal_bias="0.497" app:layout_constraintVertical_bias="0.591"/>
        <TextView
                android:text="@string/peso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/txt_peso"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintHorizontal_bias="0.507" app:layout_constraintVertical_bias="0.714"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/input_peso"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintHorizontal_bias="0.497" app:layout_constraintVertical_bias="0.787"/>
        <Button
                android:text="Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/btn_calcular"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.942"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>